homework-04/deployment/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-app
  labels:
    app: users-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users-app
  template:
    metadata:
      name: users-app
      labels:
        app: users-app
    spec:
      containers:
        - name: users-app
          image: paulrozhkin/otus-microservices-homework-04:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              protocol: TCP
      restartPolicy: Always
