homework-04/deployment/k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-db-service
spec:
  clusterIP: None
  selector:
    app: users-psql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
