homework-04/deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  selector:
    app: users-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
